--- a/overview/core-concepts-and-architecture/architecture-diagram.mdx
+++ b/overview/core-concepts-and-architecture/architecture-diagram.mdx
@@ -1,142 +1,143 @@
 ---
-title: "GoogleTest/GoogleMock Architecture (Diagram)"
-description: "Visualize the architecture of GoogleTest and GoogleMock using a high-level mermaid diagram. See how core modules interact, where user code plugs in, and how the test runner, assertions, parameterization, and mocking are orchestrated."
+title: "How Does GoogleTest Work? (Architecture Diagram)"
+description: "Visualize the architecture of GoogleTest and GoogleMock using a mermaid diagram. See how test and mock definitions flow through to execution, where test discovery and runner fit in, and which components deliver assertions, matches, and reporting — all integrated into the C++ developer workflow."
 ---
 
-# GoogleTest/GoogleMock Architecture (Diagram)
+# How Does GoogleTest Work? (Architecture Diagram)
 
-## Visualizing the Core Architecture
+## Visualizing the Architecture of GoogleTest and GoogleMock
 
-Understanding how GoogleTest and GoogleMock interact under the hood is key to mastering test creation and debugging. This page presents a high-level Mermaid diagram that clearly maps out the core modules, showing where your user code plugs in and how components like the test runner, assertion handling, parameterized tests, and mocking work together.
-
-## What You Will See Here
-
-- How GoogleTest manages test execution and discovery
-- The role of assertions and how they validate test outcomes
-- How parameterized tests enable data-driven testing
-- The integration point where GoogleMock intercepts and orchestrates mock objects and expectations
-
-This architecture visualization helps you grasp the flow from defining tests to running them and verifying behavior with mocks.
+Understanding how GoogleTest and GoogleMock operate within your C++ development workflow is key to maximizing their effectiveness. This documentation page provides a clear visualization of the architecture that power these robust frameworks. By seeing how test and mock definitions flow through to execution, where components like test discovery and the test runner fit in, and how assertions, matches, and reporting are delivered, you’ll gain valuable insights to better integrate GoogleTest into your projects.
 
 ---
 
-## Architecture Overview
+### Core Components in the GoogleTest Architecture
 
-GoogleTest and GoogleMock form a cohesive testing framework. At a high level, the architecture organizes around these key modules:
+- **Test Definitions**: Your source test files define test cases using the expressive GoogleTest syntax. These include both standard tests and mocks defined via GoogleMock.
 
-- **Test Runner**: Discovers and runs tests, managing the lifecycle of each test execution.
-- **Assertions**: Validates conditions inside tests, triggering successes or detailed failures.
-- **Parameterized Tests**: Extends testing capabilities to run the same test logic with multiple data sets.
-- **Mocking Engine (GoogleMock)**: Allows creation of mock objects that simulate interactions, letting you specify expectations and verify calls.
-- **User Test Code**: Your test definitions, including tests and mock implementations, plugging into this framework.
+- **Test Discovery**: The framework automatically discovers all defined tests through macros and internal registries, eliminating manual test listing.
 
-The following diagram visually represents how these modules connect and interact:
+- **Test Runner**: This component orchestrates test execution, runs each test case and suite, applies configured filters, and controls execution flow.
+
+- **Assertion Engine**: At the heart of verification, the assertion engine evaluates test expectations, conditions, and reports pass/fail outcomes.
+
+- **GoogleMock Core**: The mocking subsystem enables defining mock classes, setting expectations, matching arguments, and verifying interactions with mocks.
+
+- **Matchers and Expectations**: These components analyze method call arguments against complex criteria and organize expected call sequences.
+
+- **Reporting and Logging**: Test results, failures, and status are collected and formatted into readable output for developers.
+
+### How These Components Interact
+
+1. **Writing Tests and Mocks**: You author test cases and mock classes in your code by leveraging the GoogleTest and GoogleMock APIs.
+
+2. **Compilation and Linking**: Your test files link with GoogleTest and GoogleMock libraries, ensuring integration of all framework features.
+
+3. **Run-time Test Discovery**: When you execute the test binary, GoogleTest auto-discovers all registered tests.
+
+4. **Test Execution Control**: The test runner invokes each test, supporting filtering, sharding, parameterization, and parallelism as applicable.
+
+5. **Mock Interaction Verification**: During test execution, GoogleMock intercepts calls to mock objects, checks argument matchers, enforces expectations, and triggers failures immediately if violated.
+
+6. **Assertions and Result Reporting**: Test assertions are evaluated; results are gathered and reported with context such as stack traces and failure messages.
+
+7. **Test Completion and Summary**: Once all tests have run, a summary of total tests run, passed, failed, and skipped is displayed.
+
+---
+
+### Typical User Workflow Illustrated
+
+Imagine a C++ developer working on a module that has external dependencies. Using GoogleTest, they define unit tests, while GoogleMock helps simulate interactions with these dependencies precisely and reliably.
+
+This developer writes both test cases and mock classes. On running their test executable, GoogleTest discovers and runs all the cases. GoogleMock checks that mocked method calls match expectations strictly, notifying the developer if anything is amiss.
+
+This seamless flow ensures bugs are caught early, code behavior is thoroughly validated, and test maintenance is streamlined.
+
+---
+
+### Architecture Diagram
 
 ```mermaid
 flowchart TD
 
-  subgraph UserSpace["User Test Code"]
-    UserTests["Tests & Test Fixtures"]
-    UserMocks["Mock Classes & EXPECT_CALLs"]
-  end
+  %% Test Source and Definitions
+  TestSource["Test & Mock Definitions"]
 
-  subgraph TestFramework["GoogleTest Core"]
-    TestRunner["Test Runner"]
-    Assertions["Assertions & Results"]
-    ParamTests["Parameterized Tests"]
-  end
+  %% Test Discovery
+  TestDiscovery["Test Discovery"]
 
-  subgraph Mocking["GoogleMock"]
-    MockEngine["Mock Engine"]
-    ExpectCall["EXPECT_CALL, ON_CALL"]
-    Matchers["Argument Matchers"]
-    Actions["Actions & Return Values"]
-  end
+  %% Test Runner
+  TestRunner["Test Runner"]
 
-  %% User code initiates test runner
-  UserTests --> TestRunner
+  %% Assertion Engine
+  AssertionEngine["Assertion Engine"]
 
-  %% Test Runner invokes parameterized tests if used
-  TestRunner --> ParamTests
+  %% GoogleMock Core
+  GoogleMockCore["GoogleMock Core"]
 
-  %% Test Runner uses assertions for validation
-  TestRunner --> Assertions
+  %% Matchers and Expectations
+  Matchers["Matchers & Expectations"]
 
-  %% Mock objects intercept calls via mock engine
-  UserMocks --> MockEngine
+  %% Reporting
+  Reporting["Reporting & Logging"]
 
-  %% Mock Engine refers to EXPECT_CALL
-  MockEngine --> ExpectCall
+  %% Developer
+  Developer["C++ Developer"]
 
-  %% EXPECT_CALL utilizes Matchers and Actions
-  ExpectCall --> Matchers
-  ExpectCall --> Actions
+  %% Test Workflow
+  Developer --> TestSource
+  TestSource --> TestDiscovery
+  TestDiscovery --> TestRunner
+  TestRunner --> GoogleMockCore
+  GoogleMockCore --> Matchers
+  TestRunner --> AssertionEngine
+  AssertionEngine --> Reporting
+  GoogleMockCore --> AssertionEngine
+  Reporting --> Developer
 
-  %% Test Runner collaborates with Mock Engine during test execution
-  TestRunner --> MockEngine
+  %% Notes
+  classDef component fill:#cfe3ff,stroke:#3465a4,stroke-width:2px, font-weight:bold;
+  class TestSource,TestDiscovery,TestRunner,AssertionEngine,GoogleMockCore,Matchers,Reporting component;
 
-  %% Assertions receive results from Mock Engine
-  MockEngine --> Assertions
+  %% Annotations
+  %% Developer initiates source code and receives reports
 
-  classDef user fill:#eef6fc,stroke:#1e87f0,color:#1e87f0;
-  classDef core fill:#f0f0f0,stroke:#666,stroke-width:1px,color:#333;
-  classDef mock fill:#f9f0f0,stroke:#d9534f,color:#d9534f;
-
-  class UserTests,UserMocks user;
-  class TestRunner,Assertions,ParamTests core;
-  class MockEngine,ExpectCall,Matchers,Actions mock;
 ```
 
-## How to Read This Diagram
+---
 
-- The **User Test Code** box contains your test cases and mock class declarations.
-- The **Test Runner** orchestrates test execution, coordinating with parameterized tests and assertions.
-- **GoogleMock** components manage mocks: setting expectations (`EXPECT_CALL`), matching arguments, performing actions, and interacting with GoogleTest for verification.
-- Arrows show the flow of control, data, or dependencies between these parts.
+### Practical Tips
+
+- **Keep Test Definitions Simple and Focused**: Structure tests clearly so discovery and execution flow smoothly.
+- **Use Mocks to Isolate Dependencies**: Rely on GoogleMock's features to simulate external components effectively.
+- **Observe Assertion Failures Immediately**: GoogleMock halts at the first expectation violation to streamline debugging.
+- **Leverage Automatic Test Discovery**: Avoid manual test management; the framework handles this robustly.
+- **Analyze Test Reports for Insights**: Failure reports include detailed info to pinpoint issues.
 
 ---
 
-## Practical Insights
+### Troubleshooting Common Issues
 
-- Your test code calls into the test runner, which then delegates appropriate calls to parameterized tests if defined.
-- Assertions validate test conditions and report any failures.
-- When mocks are employed, GoogleMock's engine intercepts calls made by the code under test, checking them against expectations.
-- Matchers and actions provide flexibility and powerful mechanisms to define how mock methods behave and validate arguments.
-
-This visualization clarifies where to look when setting up or troubleshooting each piece of the framework.
+- **Tests Not Discovered?** Verify that test macros are used correctly and files are compiled and linked properly.
+- **Mock Expectations Not Met?** Use `--gmock_verbose=info` runtime flag to trace mock calls and understand mismatches.
+- **Unexpected Calls Warning?** Confirm if the calls were expected or add appropriate `EXPECT_CALL` or use `NiceMock` if ignoring uninteresting calls is intentional.
+- **Build / Linking Errors?** Check your build environment aligns with GoogleTest’s C++17 requirement and that GoogleMock is included as needed.
 
 ---
 
-## Tips for Effective Usage
+### Getting Started Preview
 
-- Use the diagram as a mental model when designing tests: know where your mocks will fit and how GoogleTest processes tests.
-- When tests fail unexpectedly, trace back through the flow to see if expectations or assertions are the cause.
-- Explore parameterized tests to maximize coverage with minimal code duplication.
-- Leverage GoogleMock's expressive matchers and actions to write clear and robust mocks.
+To begin using GoogleTest and GoogleMock:
 
-## Troubleshooting Common Pitfalls
+- Define your test cases and mocks using `TEST()`, `TEST_F()`, and `MOCK_METHOD`. (See [Writing and Running Your First Test](../getting-started/first-test-debugging/writing-running-first-test))
+- Compile your test code linking against GoogleTest and GoogleMock.
+- Run your tests and view reports; troubleshoot as needed.
+- Dive deeper into concepts like matchers, actions, and sequences to craft powerful tests.
 
-- Ensure mock classes properly override virtual methods; otherwise, mocks may not intercept calls.
-- Remember that `EXPECT_CALL` sets expectations that must be met; missing or extra calls lead to failures.
-- Use verbosity flags (e.g., `--gmock_verbose=info`) to trace the interaction of mock calls.
+Explore related pages for installation details, core concepts, and extended guidance.
 
 ---
 
-## Next Steps
+For the detailed API reference and step-by-step guides, see the [GoogleTest API Reference](../api-reference/core-apis/gtest-core-api) and [GoogleMock Mocking API](../api-reference/core-apis/gmock-mocking-api).
 
-Explore these complementary documentation pages to deepen your understanding and start implementing tests:
-
-- [What is GoogleTest?](/overview/product-intro-and-value/what-is-google-test)
-- [Core Concepts and Terminology](/overview/core-concepts-and-architecture/core-concepts-terminology)
-- [Test Discovery and Assertions](/overview/feature-summary-and-workflows/test-discovery-assertions)
-- [Mocking: Mock Objects & Expectations](/overview/feature-summary-and-workflows/mocking-mock-objects-overview)
-
-## References
-
-- [GoogleTest GitHub Repository](https://github.com/google/googletest)
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
-- [GoogleMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html)
-
----
-
-*Visualizing this architecture is essential to mastering GoogleTest and GoogleMock, helping you write efficient tests and understand the framework’s flow from test creation to execution and verification.*
+Thank you for choosing GoogleTest to make your C++ testing resilient, maintainable, and automated.
