--- a/guides/getting-started/setup-installation.mdx
+++ b/guides/getting-started/setup-installation.mdx
@@ -1,261 +1,187 @@
 ---
-title: "Setting Up and Installing GoogleTest"
-description: "A comprehensive, step-by-step guide to installing GoogleTest and GoogleMock in your C++ project, including building from source and integrating with CMake or Bazel. This page ensures a smooth onboarding experience regardless of your build system or platform."
+title: "Setup and Installation"
+description: "Learn how to install GoogleTest and GoogleMock in your C++ project, set up your build configuration using common tools (CMake, Bazel), and verify the environment is correctly established for testing."
 ---
 
-# Setting Up and Installing GoogleTest
+# Setup and Installation
 
-A comprehensive, step-by-step guide to installing GoogleTest and GoogleMock in your C++ project, including building from source and integrating with CMake or Bazel. This page ensures a smooth onboarding experience regardless of your build system or platform.
+## Overview
+This guide helps you quickly install and integrate GoogleTest and GoogleMock into your C++ project. You'll learn how to set up your build environment using common tools like CMake and Bazel, configure your build files to include the testing frameworks, and verify that your environment is ready to write and run tests.
 
----
+## Prerequisites
+- A working C++17 capable compiler (GCC, Clang, MSVC minimum versions can be found in the official [System Requirements & Supported Platforms](https://github.com/google/googletest/blob/main/docs/prerequisites-installation-setup/system-requirements-supported-platforms.mdx))
+- CMake (minimum version 3.14 recommended for recent GoogleTest fetch content support)
+- Bazel if you prefer Bazel-based builds
+- Basic familiarity with C++ project build configuration
 
-## 1. Overview
+## What You Will Achieve
+- Clone and build GoogleTest and GoogleMock
+- Incorporate the testing libraries into your build system
+- Build your first simple test executable
+- Run and validate the test binary
 
-### What You'll Achieve
-This guide walks you through obtaining, building, and integrating GoogleTest and GoogleMock into your C++ development environment. Whether you use CMake, Bazel, or manual build techniques, you’ll learn how to set up these frameworks so that you can write and run unit tests and mocks efficiently.
+## Time Estimate
+Expect to spend about 15-30 minutes on this setup flow depending on your environment and experience with build tools.
 
-### Prerequisites
-- A C++ development environment with a compiler supporting at least C++17.
-- Basic understanding of your build system (CMake, Bazel, or manual builds).
-- CMake version 3.14 or later if you plan to use CMake for building GoogleTest.
-- Git installed or access to the GitHub repository releases.
-
-### Expected Outcome
-By completing this setup, you'll be able to:
-- Build GoogleTest and GoogleMock from source.
-- Integrate GoogleTest into your project builds.
-- Run tests using the frameworks’ test runners.
-- Customize initialization of GoogleTest and GoogleMock.
-
-### Time Estimate
-About 15-30 minutes depending on your build system familiarity.
-
-### Difficulty Level
-Beginner to Intermediate (depending on build system experience).
+## Difficulty Level
+Beginner to Intermediate — Suitable for developers new to GoogleTest and GoogleMock or those integrating them into existing projects.
 
 ---
 
-## 2. Step-by-Step Installation and Setup
+## Step-by-Step Instructions
 
-### Step 1: Clone the GoogleTest Repository
+### 1. Clone the GoogleTest Repository
+
+To get the latest stable release with GoogleMock included, clone the repository:
 
 ```bash
-git clone https://github.com/google/googletest.git -b main
-cd googletest
+ git clone https://github.com/google/googletest.git
+ cd googletest
 ```
 
-This repository contains both GoogleTest and GoogleMock sources.
+This contains both GoogleTest and GoogleMock.
 
-### Step 2: Build Using CMake (Standalone)
+### 2. Build GoogleTest and GoogleMock Standalone with CMake
 
-1. Create a build directory:
+Create a build directory and generate native build files:
 
-   ```bash
-   mkdir build && cd build
-   ```
+```bash
+mkdir build
+cd build
+cmake ..
+```
 
-2. Generate build files with CMake:
-
-   ```bash
-   cmake ..
-   ```
-   By default, this builds both GoogleTest and GoogleMock.
-
-3. Compile the libraries:
-
-   ```bash
-   make
-   ```
-
-4. (Optional) Install globally (requires admin rights):
-
-   ```bash
-   sudo make install
-   ```
-
-#### To build GoogleTest only (no GoogleMock):
+- This generates build scripts for your platform (Makefiles on Linux/macOS, Visual Studio solution files on Windows).
+- To build only GoogleTest without GoogleMock, run: 
 
 ```bash
 cmake .. -DBUILD_GMOCK=OFF
-make
 ```
 
-### Step 3: Integrate GoogleTest into Your CMake Project
+Build the libraries and install (requires admin privileges):
 
-The most straightforward way is to link against the installed `gtest` libraries or include GoogleTest as a subdirectory.
+```bash
+make
+sudo make install
+```
 
-#### Using Installed Libraries
+On Windows, open the generated `.sln` file in Visual Studio and build.
+
+### 3. Integrate GoogleTest/GoogleMock into Your Project Using CMake
+
+The recommended method is to include the libraries as dependencies in your `CMakeLists.txt`. You can either:
+
+- Use `find_package` after installation:
 
 ```cmake
 find_package(GTest REQUIRED)
-add_executable(my_test test.cpp)
-target_link_libraries(my_test GTest::gtest_main)
-add_test(NAME my_test COMMAND my_test)
+target_link_libraries(your_test_target PRIVATE GTest::gtest GTest::gmock)
 ```
 
-#### Adding GoogleTest as Subdirectory
+- Or build GoogleTest as part of your project via `FetchContent` (requires CMake 3.14+):
 
 ```cmake
-add_subdirectory(path/to/googletest)
-add_executable(my_test test.cpp)
-target_link_libraries(my_test gtest_main)
-add_test(NAME my_test COMMAND my_test)
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/refs/tags/release-1.17.0.zip
+)
+# For Windows compatibility
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+add_executable(your_test your_test.cc)
+target_link_libraries(your_test GTest::gtest_main GTest::gmock_main)
+add_test(NAME your_test COMMAND your_test)
 ```
 
-### Step 4: Build Using Bazel
+### 4. Build and Run Your Tests
 
-1. Add GoogleTest as a dependency in your WORKSPACE file.
-2. Reference the `cc_test` rules in your BUILD files.
+Build your project as usual. The test executable linked with `gtest_main` or `gmock_main` includes a default `main()` function.
 
-(Refer to [GoogleTest Bazel Integration Guide](https://github.com/google/googletest/blob/main/googletest/README.md) for details.)
+Run your compiled test binary:
 
-### Step 5: (Optional) Write Your Own `main()` Function
+```bash
+./your_test
+```
 
-While GoogleTest and GoogleMock provide default `main()` implementations (`gtest_main` or `gmock_main`), you can provide your own when you need custom initialization (e.g., command-line flag parsing). Here is an example:
+You should see output indicating test results.
+
+### 5. Validate Your Setup
+
+To confirm everything is working, create a minimal test file `sample_test.cc`:
 
 ```cpp
 #include <gtest/gtest.h>
 
-int main(int argc, char** argv) {
-  testing::InitGoogleTest(&argc, argv);
-  return RUN_ALL_TESTS();
+TEST(SampleTest, TrueIsTrue) {
+  EXPECT_TRUE(true);
 }
 ```
 
-For GoogleMock:
-
-```cpp
-#include <gmock/gmock.h>
-
-int main(int argc, char** argv) {
-  testing::InitGoogleMock(&argc, argv);
-  return RUN_ALL_TESTS();
-}
-```
-
-### Step 6: Verify the Installation
-
-Create a simple test file `sample_test.cpp`:
-
-```cpp
-#include <gtest/gtest.h>
-
-TEST(SampleTest, BasicAssertions) {
-  EXPECT_EQ(1 + 1, 2);
-}
-```
-
-Build it:
-
-```bash
-g++ -std=c++17 sample_test.cpp -lgtest -lgtest_main -pthread -o sample_test
-```
-
-Run the test:
-
-```bash
-./sample_test
-```
-
-You should see output indicating that the test passed.
+Build and run this test; a passing output confirms your installation.
 
 ---
 
-## 3. Understanding GoogleMock Integration and Initialization
+## Using Bazel for Setup
 
-GoogleMock extends GoogleTest with mocking capabilities.
+GoogleTest and GoogleMock also support Bazel build tool.
 
-### Initialization Tips
+1. Add `googletest` and `googlemock` dependencies to your WORKSPACE and BUILD files as detailed in the official Bazel documentation.
+2. Run/build tests with `bazel test //path/to:test_target`.
 
-- Use `testing::InitGoogleMock(&argc, argv);` to properly initialize both GoogleMock and GoogleTest.
-- It parses and strips GoogleMock-specific command-line flags (like `--gmock_verbose`) out of `argv`.
+Refer to the [Installation with CMake and Bazel](https://github.com/google/googletest/blob/main/docs/prerequisites-installation-setup/installation-cmake-bazel.mdx) page for detailed Bazel instructions.
 
-Example `main` function with GoogleMock:
+---
 
-```cpp
-#include <gmock/gmock.h>
+## Practical Tips
 
-int main(int argc, char** argv) {
-  testing::InitGoogleMock(&argc, argv);
-  return RUN_ALL_TESTS();
-}
+- Always ensure your compiler supports **at least C++17**, as GoogleTest requires this standard.
+- Use `gtest_main` or `gmock_main` libraries to avoid writing your own `main()` function.
+- You can customize build options such as `BUILD_SHARED_LIBS` for shared libraries or `gtest_force_shared_crt` on Windows for runtime library compatibility.
+- When integrating into existing projects, prefer embedding GoogleTest source or using FetchContent to avoid version mismatches.
+
+---
+
+## Troubleshooting Common Issues
+
+### Build Errors and Runtime Failures
+- Verify C++ standard compatibility: Set `CMAKE_CXX_STANDARD` to 17 or above.
+
+```cmake
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 ```
 
-On some embedded or Arduino-like platforms where `argc` and `argv` are not available, use `testing::InitGoogleMock();` without parameters.
+- On Windows, enable `gtest_force_shared_crt` if you see runtime library conflicts.
 
-### Key Flags
+- Ensure that the thread library (pthreads) is linked if your platform requires it.
 
-- `--gmock_verbose`: Controls the verbosity of mock framework outputs. E.g., `--gmock_verbose=info`.
-- `--gmock_default_mock_behavior`: Sets mock object behavior - nice, strict, etc.
+### Missing Symbols or Linker Errors
+- Confirm you link against the appropriate GoogleTest or GoogleMock targets (`gtest_main`, `gmock_main`, `gtest`, `gmock`).
+- If using pkg-config files, verify that `gmock.pc` or `gmock_main.pc` are correctly referenced.
 
-For detailed usage, visit the [GoogleMock README](https://github.com/google/googletest/blob/main/googlemock/README.md).
-
----
-
-## 4. Practical Tips and Best Practices
-
-- Prefer linking to `gtest_main` or `gmock_main` to avoid writing your own boilerplate `main()`.
-- Use CMake’s `add_subdirectory()` for easier integration and to keep GoogleTest in sync with your project.
-- Always use compatible versions of GoogleTest and GoogleMock.
-- Keep your test binaries separated from your production binaries.
-- Regularly update GoogleTest for the latest improvements and fixes.
+### Test Binary Does Not Run or Shows No Tests
+- Double-check your tests are properly registered using `TEST()` or `TEST_F()` macros.
+- Confirm the test binary links with `gtest_main` or includes a valid `main()` function.
 
 ---
 
-## 5. Troubleshooting Common Setup Issues
+## Next Steps
 
-<AccordionGroup title="Troubleshooting Setup Issues">
-<Accordion title="Build Errors with CMake">
-- **Problem:** CMake configure fails or can’t find dependencies.
-- **Solution:** Ensure CMake version is 3.14 or above.
-  Check that compilers support C++17.
-  Verify proper Git clone of the repository.
-</Accordion>
-<Accordion title="Linking Errors">
-- **Problem:** Linker complains about unresolved symbols like `RUN_ALL_TESTS()`.
-- **Solution:** Make sure to link against `gtest_main` or `gmock_main`.
-  Ensure your include and library paths point to the correct GoogleTest installation.
-</Accordion>
-<Accordion title="GoogleMock Flags Not Recognized">
-- **Problem:** Passing GoogleMock flags do not affect behavior.
-- **Solution:** Use `testing::InitGoogleMock(&argc, argv);` instead of just `InitGoogleTest`.
-  Remove unrecognized flags manually if needed.
-</Accordion>
-<Accordion title="Tests Not Running or Being Discovered">
-- **Problem:** After compilation, tests do not run or are not found.
-- **Solution:** Verify that tests are registered correctly with `TEST()` macros.
-  Ensure you call `RUN_ALL_TESTS()` in your main function.
-</Accordion>
-</AccordionGroup>
+- After installation, proceed to write and run your first tests using the [Writing and Running Your First Test](https://github.com/google/googletest/blob/main/docs/getting-started/first-test-debugging/writing-running-first-test.mdx) guide.
+- Explore [Build, Configure, and Validate Your Installation](https://github.com/google/googletest/blob/main/docs/getting-started/prerequisites-installation-setup/build-configure-validate.mdx) for further validation strategies.
+- For mocking capabilities, review GoogleMock's [Mocking API](https://github.com/google/googletest/blob/main/api-reference/core-apis/gmock-mocking-api.mdx).
 
 ---
 
-## 6. Additional Resources and Next Steps
+## References
+- Official GoogleTest GitHub: [https://github.com/google/googletest](https://github.com/google/googletest)
+- GoogleMock README: [gmock/README.md](https://github.com/google/googletest/blob/main/googlemock/README.md)
+- CMake Integration: [googletest/README.md](https://github.com/google/googletest/blob/main/googletest/README.md)
+- Mocking Reference: [docs/reference/mocking.md](https://github.com/google/googletest/blob/main/docs/reference/mocking.md)
 
-- **GoogleTest Primer:** [GoogleTest Primer (docs/primer.md)](/docs/primer.md) – Learn the basics of writing tests.
-- **Writing Your First Test:** [Writing Your First Test Guide](/guides/getting-started/writing-first-test) – Practical next steps after setup.
-- **Mocking with GoogleMock:** [GoogleMock README](https://github.com/google/googletest/blob/main/googlemock/README.md) – Deep dive into the mocking framework.
-- **Troubleshooting Setup Issues:** [Troubleshooting Guide](/getting-started/first-steps-usage/troubleshooting-setup) – In-depth help for common problems.
-- **Integration with Build Systems:** [Integration FAQ](/faq/advanced-integration/integration-with-build-systems) – How to best integrate with CMake, Bazel, and others.
 
----
-
-## 7. Summary Diagram
-
-```mermaid
-flowchart TD
-  A[Clone googletest repo] --> B{Choose Build System}
-  B -->|CMake| C[Create build dir]
-  C --> D[Run cmake ..]
-  D --> E[Run make]
-  E --> F[Install or Link in Project]
-  B -->|Bazel| G[Setup WORKSPACE and BUILD files]
-  G --> F
-  F --> H[Write Tests]
-  H --> I[Run Tests with RUN_ALL_TESTS()]
-
-  classDef buildSteps fill:#f9f,stroke:#333,stroke-width:1px
-  class C,D,E,F,G buildSteps;
-```
-
----
+<Note>
+For automated test discovery and execution, the `RUN_ALL_TESTS()` function runs all registered tests once and returns the appropriate exit code, which you must return from your test binary's `main()`.
+</Note>
